Clean up button CSS Don't use fixed heights/line-height so we can have text wrap update visual style from PSD

--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -585,7 +585,6 @@ nav.menu-bar {
 
     h3 {
         .span(4);
-        padding-top: 4px;
     }
 
     .form-contents {
@@ -597,7 +596,7 @@ nav.menu-bar {
     }
 
     .field {
-        padding: 4px 0;
+        padding: 0 0 8px 0;
     }
 
     select {
@@ -606,11 +605,6 @@ nav.menu-bar {
 
     input[type=email] {
         width: 80%;
-        margin-top: 2px;
-    }
-
-    input[type=submit] {
-        font-size: 18px;
     }
 
     .field-privacy {
